--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "market-breadth",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
     "bun-types": "latest",
@@ -8,5 +8,9 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "scripts": {
+    "dev": "bun run src/index.ts",
+    "test": "bun test --watch"
   }
 }
